src/test/ui/error-codes/E0499.nll.stderr
error: compilation successful
  --> $DIR/E0499.rs:11:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let mut i = 0;
LL | |     let mut x = &mut i;
LL | |     let mut a = &mut i; //~ ERROR E0499
LL | | }
   | |_^

error: aborting due to previous error

